--- a/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_full-episodes.scss
+++ b/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_full-episodes.scss
@@ -142,6 +142,14 @@
             bottom: 10%;
             left: 5%;
             position: absolute;
+            width: 90%;
+            .meta-icon {
+              &:before {
+                left: 0;
+                margin-top: -18.5px;
+                top: 50%;
+              }
+            }
             @extend %meta;
             .meta {
               padding-left: 70px;
@@ -159,13 +167,6 @@
                 line-height: 25px;
                 span {
                   font-size: 17px;
-                }
-              }
-              .play-icon {
-                &:before {
-                  left: 0;
-                  margin-top: -18.5px;
-                  top: 50%;
                 }
               }
               @include breakpoint($bp-768-width) {
@@ -268,6 +269,11 @@
                 @include breakpoint($bp-640-width) {
                   height: 70px;
                 }
+                .meta-wrapper-inner {
+                  display: table;
+                  height: 100%;
+                  width: 100%;
+                }
                 .meta-icon {
                   &:before {
                     left: 10px;
@@ -280,12 +286,13 @@
                 }
                 @extend %meta;
                 .meta {
-                  padding-left: 55px;
-                  padding-right: 20px;
-                  margin-top: -25px;
-                  position: absolute;
+                  display: table-cell;
                   left: 0;
-                  top: 50%;
+                  max-width: 100px;
+                  padding-left: 55px;
+                  position: relative;
+                  top: auto;
+                  vertical-align: middle;
                   width: 100%;
                   .caption, .title, .additional {
                     max-width: 100%;
